Alterado o arquivo index

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-	<div class="alert">CampusParty</div>
+	<div class="alert">PósDevopsimpacta</div>
   <div class="container">
 		<div class="devops-paths">
       <br><br><br>
-			<p class="keep-studying">Hello Campus Party!</p>
+			<p class="keep-studying">Hello Galera Devops!</p>
     </div>
   </div>
 </body>
