--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   <div class="container">
 		<div class="devops-paths">
       <br><br><br>
-			<p class="keep-studying">Hello Galera Devops!!</p>
+			<p class="keep-studying">Hello Galera Devops!!!</p>
     </div>
   </div>
 </body>
